--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,9 +1,6 @@
 <section id="homeBody" class="row justify-content-center">
     <div class="col-lg-7">
-        {{> postEditor }}
-        <div id="checkNewPosts"></div>
-        {{> newpostsavailable}}
-        <div id="post-feed"></div>
+        <div id="home-app"></div>
     </div>
     {{#or loggedInUserData.settings.showRecommendations loggedInUserData.settings.showHashtags}}
         <div class="col-md-4 d-none d-lg-block" id="homeSidebar">
@@ -74,7 +71,7 @@
                         <div class="hashtags-list">
                             {{#each popularHashtags}}
                                 <p>
-                                    <a href="/tag/{{this.name}}">#{{this.name}}</a>
+                                    <a class="post__tag" href="/tag/{{this.name}}">#{{this.name}}</a>
                                 </p>
                             {{/each}}
                         </div>
@@ -98,27 +95,4 @@
 
 {{> filemessage }}
 
-<script src="/js/vue/postFeed.js"></script>
-
-{{!-- <script>
-  //called immediately below and in restartInfiniteSCroll
-  function startInfiniteScroll(){
-      $('#postsContainer').infiniteScroll({
-          //infinite scroll loading is timestamp based; we want to load posts just older than the oldest post yet loaded, or we use the current time as a placeholder value
-          //if we've just gotten to this page, or if we've just made a post the feed is emptied and needPostsOlderThan is set so that the new post loads on top of the feed
-          path: function() {
-              if($(".oldesttimestamp").length){
-                //if there are posts on the page, the server has provided the timestamp of the oldest post yet loaded in a hidden element that we will find here
-                return '/showposts/home/{{loggedInUserData._id}}/' + $(".oldesttimestamp").last().html();
-              }
-              //this is for when the feed is currently empty and is being loaded/reloaded
-              return '/showposts/home/{{loggedInUserData._id}}/' + needPostsOlderThan;
-          },
-          append: '.post',
-          prefill: true,
-          history: true,
-          status: '.page-load-status'
-      });
-  }
-  startInfiniteScroll(true);
-</script> --}}
+<script src="/js/vue/home.js"></script>
