--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -11,8 +11,8 @@
   </div>
   <div class="col-6 d-flex align-items-start">
     <div id="profileControlsDesktopMobile" class="button-group">
-      <a href="#" id="switch-to-drafts" class="button outline-button full-width-button"><i
-          class="fas fa-pencil-ruler"></i> See drafts</a>
+      <!-- <a href="#" id="switch-to-drafts" class="button outline-button full-width-button"><i
+          class="fas fa-pencil-ruler"></i> See drafts</a> -->
       <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal"
         data-target="#updateProfileModal"><i class="fas fa-user-circle"></i> Edit profile</button>
       <a href="/settings" class="button outline-button full-width-button"><i class="fas fa-cog"></i> Settings</a>
@@ -32,8 +32,8 @@
 </h3>
 {{#if isOwnProfile}}
 <div id="profileControlsTablet">
-  <a href="#" id="switch-to-drafts" class="button outline-button full-width-button"><i class="fas fa-pencil-ruler"></i>
-    See drafts</a>
+  <!-- <a href="#" id="switch-to-drafts" class="button outline-button full-width-button"><i class="fas fa-pencil-ruler"></i>
+    See drafts</a> -->
   <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal"
     data-target="#updateProfileModal" style="margin-bottom: 0.5rem;"><i class="fas fa-user-circle"></i> Edit
     profile</button>
