--- a/views/partials/scriptPartials/profilescripts.handlebars
+++ b/views/partials/scriptPartials/profilescripts.handlebars
@@ -14,7 +14,7 @@
       $("#image-label").html("choose image");
     }
   })
-  $("#image-preview").css("background-image", "url('https://sweet-images.s3.amazonaws.com/{{profileData.image}}')");
+  $("#image-preview").css("background-image", "url('https://sweet-images.s3.eu-west-2.amazonaws.com/{{profileData.image}}')");
   $("#image-preview").css("background-size", "cover");
   $("#image-preview").css("background-position", "center center");
 </script>
