--- a/views/partials/userlist.handlebars
+++ b/views/partials/userlist.handlebars
@@ -1,6 +1,6 @@
 <div class="list-box">
   <a class="list-box__header" href="/{{this.username}}" alt="@{{this.username}}">
-    <img class="list-box__image" src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
+    <img class="list-box__image" src="{{#if this.imageEnabled}}https://sweet-images.s3.eu-west-2.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
     <span class="list-box__name">
       {{#if this.displayName}}
         <strong>{{this.displayName}}</strong> &middot; <span class="text-muted">@{{this.username}}</span>
