--- a/views/partials/notifications.handlebars
+++ b/views/partials/notifications.handlebars
@@ -10,7 +10,7 @@
     class="d-flex align-items-center p-2 list-group-item list-group-item-action notificationLink {{#unless this.seen}}notification-active{{/unless}}"
     id="{{this._id}}">
     <img class="postAuthorImage mr-2" style="width:25px;height:25px;"
-      src="{{#if this.image}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
+      src="{{#if this.image}}https://sweet-images.s3.eu-west-2.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
     <span class="notification-text">
       {{{this.text}}}
     </span>
