Tweaks to privacy policy

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -35,8 +35,7 @@
     <p>
       Sweet is <em>not</em> a decentralised platform like Mastodon or Scuttlebutt. All our code is open source so you
       are very welcome to run your own instance of the app, but individual instances do not link up with each other, and
-      all user data is currently stored on a server located in the UK. <strong>As of May 2020, no external organisation
-        has ever requested access to the data kept on Sweet’s server.</strong>
+      all user data is currently stored on a server located in the UK.
     </p>
     <p>
       It goes without saying that Sweet has no ads and will never sell or otherwise unethically make use of user data.
@@ -55,8 +54,8 @@
     <p>
       Sweet is under active development <a href="https://github.com/lowercasename/sweet/">on Github</a>. Please join us
       and help out! The main development team currently consists of <a
-        href="https://sweet.sh/lowercasename">@lowercasename</a> (Raphael) and <a
-        href="https://sweet.sh/giantpredatorymollusk">@giantpredatorymollusk</a> (Mitch). Shoot either of us a message
+        href="https://sweet.sh/lowercasename">@lowercasename</a> (Raphael), <a href="https://sweet.sh/kit">@kit</a>, and
+      <a href="https://sweet.sh/hakamadare">@hakamadare</a>. Shoot any of us a message
       on Sweet or open an issue or pull request on Github if you find a bug, would like to suggest a new feature, or can
       see a good reason to change an existing feature.
     </p>
@@ -144,6 +143,13 @@
       will be visible and downloadable by anybody. If you want decent privacy (i.e. your information is only visible to
       the people you select), the only way to do so is to set your account to be visible to Sweet users only, post only
       private posts, and not to post in any publicly viewable communities.</p>
+    <p>If you choose to provide it to us, we will store personally identifiable data about you, which may include your
+      email, name, and anything else you write in posts or on your account. We will never request any personally
+      identifiable data from you. We use the data we keep for the following purposes: to log you into the website and
+      mobile app, and to show you appropriate content (posts by users you follow and not those you've muted, for
+      instance).</p>
+    <p>If you have concerns or questions about any part of this privacy policy, please reach out to the administators
+      (listed above) and we'll be happy to help.</p>
     <h3 id="license-1">License</h3>
     <p>This privacy policy was adapted from <a href="https://friend.camp/about/more#pp">one written by Darius Kazemi</a>
       and is provided under a <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero
