--- a/scss/_posts-comments.scss
+++ b/scss/_posts-comments.scss
@@ -361,7 +361,7 @@ a.show-more:hover {
 
 section.comments {
     font-size: 0.9rem;
-    margin: 0 1rem;
+    margin: 0 1rem 1rem 1rem;
 }
 
 section.comments>.comments-container>.comment:first-child {
