--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,8 +8,8 @@
                 <section class="admin-notices">
                   <h4>Sweet News</h4>
                   <hr />
-                  <p><em>17 August 2020</em></p>
-                  <p>Hi new and old Sweet users! We've been busy with bugfixes and new features. In the Android and iOS app, once the updates go through the app stores, notifications will take you to the post they're about, and more notification improvements are planned. There have been some small tweaks to the new post screen. We've also removed the email notifications and digest function. Please let us know in the <a href="https://sweet.sh/community/sweet-development">Sweet Development</a> community if you find a bug.</p>
+                  <p><em>27 September 2020</em></p>
+                  <p>Welcome to a major new Sweet update, including a brand new post and comment editor, new superpowers in the Sweet API, the ability to delete your Sweet account, and lots of other little changes. There will be bugs, so please let us know in the <a href="https://sweet.sh/community/sweet-development">Sweet Development</a> community when you find one.</p>
                 </section>
                 {{#if loggedInUserData.settings.showRecommendations}}
                     <section class="recommendations">
