Updated admin notice

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,8 +8,8 @@
                 <section class="admin-notices">
                   <h4>Sweet News</h4>
                   <hr />
-                  <p><em>27 September 2020</em></p>
-                  <p>Welcome to a major new Sweet update, including a brand new post and comment editor, new superpowers in the Sweet API, the ability to delete your Sweet account, and lots of other little changes. There will be bugs, so please let us know in the <a href="https://sweet.sh/community/sweet-development">Sweet Development</a> community when you find one.</p>
+                  <p><em>3 December 2020</em></p>
+                  <p>Boosting posts has been removed (<a href="https://sweet.sh/lowercasename/WHaLiNBV1kcwbNxZIkBly">rationale here</a>), and replaced with the <a href="https://sweet.sh/library">Library</a>, from which we hope you'll get lots of use. We've also fixed bugs with the image uploader and missing posts on user pages. If you spot any bugs, let us know in the <a href="https://sweet.sh/community/sweet-development">Sweet Development</a> community.</p>
                 </section>
                 {{#if loggedInUserData.settings.showRecommendations}}
                     <section class="recommendations">
