--- a/scss/_dark-mode-colors.scss
+++ b/scss/_dark-mode-colors.scss
@@ -40,6 +40,7 @@ $editor-background: $light-grey;
 $navbar-shadow: 5px 5px 10px rgba(0,0,0,0.8);
 $dropdown-shadow: 0 3px 8px rgba(0, 0, 0,8);
 $post-shadow: 0px 0px 6px rgba(0, 0, 0, 0.8);
+$card-shadow: 0px 0px 3px rgba(0, 0, 0, 0.8);
 $button-shadow: none;
 $button-shadow-hover: none;
 
