--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -115,6 +115,16 @@ select {
             color: $background-white;
         }
     }
+    &.text-button {
+        color: $dark-grey;
+        background-color: transparent;
+        border: none;
+        box-shadow: none;
+        padding: 0;
+        &:hover {
+            color: $dark-pink;
+        }
+    }
 }
 
 button.close {
