--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -42,6 +42,7 @@ $editor-background: lighten($lightest-grey, 2%);
 $navbar-shadow: 5px 5px 10px rgba(0,0,0,0.3);
 $dropdown-shadow: 0 3px 8px rgba(0, 0, 0, .25);
 $post-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
+$card-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
 $button-shadow: 2px 2px 3px rgba(0,0,0,0.15);
 $button-shadow-hover: 1px 1px 1px rgba(0,0,0,0.2);
 
