--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -63,6 +63,7 @@
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown" id="userDropdownMenu">
                 <a class="dropdown-item" href="/{{loggedInUserData.username}}"><i class="fas fa-fw fa-user-circle"></i> profile</a>
                 <a class="dropdown-item" href="/library"><i class="fas fa-fw fa-book-heart"></i> library</a>
+                <a class="dropdown-item" href="/audiences"><i class="fas fa-fw fa-user-friends"></i> audiences</a>
                 <a class="dropdown-item" href="/settings"><i class="fas fa-fw fa-cog"></i> settings</a>
                 <a class="dropdown-item switch-style" data-style="{{#eq loggedInUserData.settings.theme "dark"}}dark{{else}}light{{/eq}}" href="#"><i class="fas fa-fw fa-{{#eq loggedInUserData.settings.theme "dark"}}sun{{else}}moon{{/eq}}"></i> {{#eq loggedInUserData.settings.theme "dark"}}light{{else}}dark{{/eq}} mode</a>
                 <div class="dropdown-divider"></div>
