--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -24,6 +24,9 @@
                 <input type="password" name="passwordrepeat" placeholder="Repeat password">
                 <label for="passwordrepeat">Repeat password</label>
             </div>
+            <div class="form-group">
+                <div class="g-recaptcha" data-sitekey="6LcoayEaAAAAADN3QZxU6thbV-v054753frbO4Kd"></div>
+            </div>
 
             <button class="button large-button full-width-button" type="submit" >Sign up</button>
         </form>
