--- a/views/layouts/logged-out.handlebars
+++ b/views/layouts/logged-out.handlebars
@@ -36,6 +36,8 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="/js/infinite-scroll.pkgd.min.js" crossorigin="anonymous"></script> -->
 
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
         {{> clientSideCodeErrorReporter }}
     </head>
 
