Updated Audience manager

--- a/views/audienceManager.handlebars
+++ b/views/audienceManager.handlebars
@@ -2,7 +2,8 @@
   <div class="col-lg-8">
     <div class="pane mb-3">
       <h3 class="page-header--pink mx-2">Audiences</h3>
-      <p>Audiences are collections of people which you curate. You can create any number of Audiences, and one person can be in many Audiences. When you create or edit a post, you will choose which Audiences are able to see that post. You can also choose which Audiences can see other things about your profile, like the identities of people you've flagged.</p>
+      <p>Audiences are collections of people with whom you want to share something. You can create any number of Audiences, and one person can be in many Audiences. When you create or edit a post, you will choose which Audiences are able to see that post. You can also choose which Audiences can see other things about your profile, like the identities of people you've flagged.</p>
+      <p>Audiences are <strong>private</strong>: only you can see the list of Audiences you have created and their members.</p>
     </div>
 		<div id="audience-manager-app"></div>
 		</div>
